fix: 修复填报疫情通时疫情通页面 404 导致填报失败的问题
1. 将触发器从原来的每天 09:05 触发一次改为 08:00 - 09:59 每 20 分钟触发一次
2. 提交疫情通前检查是否已经填报，忽略已经填报的疫情通

--- a/template.yaml
+++ b/template.yaml
@@ -28,7 +28,7 @@ Resources:
             Type: 'Timer'
             Properties:
               Enable: true
-              CronExpression: '0 2 9 * * * *'
+              CronExpression: '0 */20 8,9 * * * *'
           upload_screenshot:
             Type: 'Timer'
             Properties:
